# jalo

./: .gitignore  AGENTS.md  README.md  SCORING.md  TODO.md  config.example.toml  config.toml  distill.py  formatting.py  freqdist.py  hardware.py  jalo.py  jalo_batching.prof  jalo_chunking.prof  jalo_metrics.prof  jalo_optim.prof  keyboard_model.py  layout.py  logger.py  memory.py  metrics.py  model.py  objective.py  optim.py  optimizer.py  pyproject.toml  tempfsb.py  textui.py
corpus/: split.py
corpus/en/: DATA.md  bigrams.json  (+3 more)
keebs/: ansi.py  ansi_32.py  ansi_angle.py  cr8.py  ortho-22.py  ortho.py  ortho_22.py  ortho_pinky_33.py  ortho_thumb.py  ortho_thumb_33.py
layouts/: asto.kb  asto_22.kb  bunya.kb  colemak.kb  colemak_dh.kb  ctrdoeis.kb  dusk-wp.kb  dvorak.kb  engram.kb  enthium.kb  gallium.kb  graphite.kb  hdgold.kb  hdneu.kb  hdpm_inverted.kb  hdpro.kb  hdtitanium.kb  inrolly.kb  isrt.kb  mtgap.kb  night.kb  qwerty.kb  racket.kb  semimak.kb  snrtaico.kb  sturdy.kb  sweetnail.kb  tshgruae.kb
objectives/: default.toml  graphite.toml  oxeylyzer.toml
optimizers/: __init__.py  annealing.py  compare_optimizers.csv  compare_optimizers_populations.csv  genetic.py  greedyhill.py  gsa.py  helper.py  steepestheaps.py  steepesthill.py
repl/: __init__.py  completers.py  formatting.py  logger.py  memory.py  shell.py
solvers/: __init__.py  annealing.py  genetic.py  greedyhill.py  helper.py  steepesthill.py
tests/: test_cli.py  test_delta_swap.py  test_hardware.py  test_layout.py  test_model.py  test_model_metrics.py  test_objective_formula.py  test_optim.py
(+83 files in other folders)
